--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="BAYFRONT - Professional Real Estate Experts Around You">
+<Layout title="BAYFRONT - プロフェッショナルな不動産エキスパートがあなたのそばに" lang="ja">
   <section class="relative h-[calc(100vh-88px)] flex items-center justify-center text-white">
     <div class="absolute inset-0 z-0">
       <img src="/hero-new.jpg" alt="Hero Background" class="w-full h-full object-cover object-center" />
@@ -10,7 +10,7 @@ import Layout from '../layouts/Layout.astro';
     </div>
     <div class="container mx-auto px-8 text-center relative z-10">
       <img src="/logo-text.svg" alt="BAYFRONT" class="h-8 md:h-16 mx-auto mb-4 brightness-0 invert" />
-      <p class="text-xl tracking-[0.2em] font-light">Pilot quality New life</p>
+      <p class="text-xl tracking-[0.2em] font-light">新生活ナビゲーター</p>
     </div>
   </section>
 
